# capitalcom-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  USAGE.md  glama.json  install.sh  pyproject.toml  pytest.ini  server.json  test_prompts.py  test_resources.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  glama-introspect.yml  glama-repro.yml  publish.yml
capital_mcp/: __init__.py  __main__.py  capital_client.py  cli.py  config.py  context.py  errors.py  models.py  rate_limit.py  risk.py  serialization.py  server.py  session.py  utils.py  websocket_client.py
ci/: glama-repro.Dockerfile
docs/: api-stability.md  extending.md  good-first-issues.md
tests/: __init__.py  conftest.py  test_api_surface_snapshot.py  test_basic.py  test_cli.py  test_context.py  test_e2e_coverage.py  test_mcp_registration.py  test_prompts.py  test_resources.py  test_tools_account.py  test_tools_chatgpt.py  test_tools_market.py  test_tools_session.py  test_tools_stream.py  test_tools_trading.py  test_tools_watchlist.py  test_websocket.py
tests/e2e/: conftest.py  coverage.py  test_e2e_read.py  test_e2e_stream.py  test_e2e_trading.py
tests/snapshots/: api_surface.json
