[project]
name = "capitalcom-mcp"
version = "0.3.3"
description = "Unofficial Model Context Protocol server for the Capital.com Open API (built on capitalcom-cli)"
authors = [{name = "Simon Tarara"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["mcp", "model-context-protocol", "capital.com", "trading", "fastmcp", "llm", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.0,<4",
    "capitalcom-cli>=0.6,<0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "build>=1.2.0",
]

[project.scripts]
capitalcom-mcp = "capital_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/SimonTarara62/capitalcom-mcp-server"
Repository = "https://github.com/SimonTarara62/capitalcom-mcp-server"
Issues = "https://github.com/SimonTarara62/capitalcom-mcp-server/issues"
Changelog = "https://github.com/SimonTarara62/capitalcom-mcp-server/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["capital_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "-m", "not e2e"]
markers = [
    "e2e: end-to-end tests that hit the real Capital.com DEMO API through the MCP server (opt-in: set CAP_MCP_E2E=1 and run with -m e2e)",
]
